# meepo

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: meepo.rb
MeepoApp/: README.md  project.yml
MeepoApp/MeepoApp.xcodeproj/: project.pbxproj
MeepoApp/Resources/: Info.plist
MeepoApp/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
MeepoApp/Sources/: MeepoApp.swift
MeepoApp/Sources/Models/: ChatMessage.swift  GatewayProtocol.swift  Session.swift
MeepoApp/Sources/Networking/: MeepoClient.swift  SettingsStore.swift
MeepoApp/Sources/Theme/: MeepoTheme.swift
MeepoApp/Sources/ViewModels/: ChatViewModel.swift
MeepoApp/Sources/Views/: ChatView.swift  ContentView.swift  SessionsView.swift  SettingsView.swift
config/: default.toml
crates/meepo-a2a/: Cargo.toml
crates/meepo-a2a/src/: CLAUDE.md  server.rs
crates/meepo-channels/: Cargo.toml
crates/meepo-channels/src/: bus.rs  discord.rs  email.rs  imessage.rs  lib.rs  slack.rs
crates/meepo-cli/: Cargo.toml
crates/meepo-cli/src/: config.rs  main.rs
crates/meepo-core/: Cargo.toml
crates/meepo-core/src/: agent.rs  api.rs  context.rs  intent.rs  lib.rs  notifications.rs  ollama.rs  orchestrator.rs  provider.rs  query_router.rs  tool_selector.rs  types.rs  usage.rs
crates/meepo-core/src/agents/: manager.rs  mod.rs  profile.rs
crates/meepo-core/src/audio/: mod.rs  stt.rs  tts.rs  vad.rs
crates/meepo-core/src/autonomy/: action_log.rs  goals.rs  mod.rs  planner.rs  user_model.rs
crates/meepo-core/src/platform/: macos.rs  mod.rs
crates/meepo-core/src/providers/: anthropic.rs  google.rs  mod.rs  openai.rs  openai_compat.rs  router.rs  types.rs
crates/meepo-core/src/skills/: CLAUDE.md  parser.rs
crates/meepo-core/src/tools/: accessibility.rs  autonomous.rs  browser.rs  canvas.rs  code.rs  filesystem.rs  macos.rs  memory.rs  mod.rs  system.rs  usage_stats.rs  watchers.rs
crates/meepo-core/src/tools/lifestyle/: calendar.rs  finance.rs
crates/meepo-gateway/: Cargo.toml
crates/meepo-gateway/src/: auth.rs  events.rs  lib.rs  protocol.rs  server.rs  session.rs  webchat.rs
crates/meepo-gateway/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/meepo-gateway/ui/src/: App.tsx
crates/meepo-gateway/ui/src/components/: ChatInput.tsx  ChatMessage.tsx  SessionSidebar.tsx  TypingIndicator.tsx
crates/meepo-gateway/ui/src/hooks/: useWebSocket.ts
crates/meepo-gateway/ui/src/styles/: globals.css
crates/meepo-knowledge/src/: graph.rs  lib.rs  sqlite.rs  tantivy.rs
crates/meepo-scheduler/: Cargo.toml
crates/meepo-scheduler/src/: persistence.rs  runner.rs  watcher.rs
docs/: CODEBASE_ANALYSIS.md  IOS_SETUP_GUIDE.md  OPENCLAW_PARITY_PLAN.md  architecture.md  security-audit.md
docs/plans/: 2026-02-09-autonomous-agent-design.md  2026-02-10-agent-templates-design.md  2026-02-10-agent-templates-plan.md  2026-02-10-browser-automation-plan.md
installer/: README.md
installer/scripts/: build-dmg.sh  generate-icon.sh
scripts/: install-hooks.sh  pre-commit  pre-push
