[workspace]
resolver = "2"
members = [
    "crates/meepo-core",
    "crates/meepo-channels",
    "crates/meepo-knowledge",
    "crates/meepo-scheduler",
    "crates/meepo-mcp",
    "crates/meepo-a2a",
    "crates/meepo-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A local AI agent that connects Claude to your digital life"
repository = "https://github.com/kavymi/meepo"
homepage = "https://github.com/kavymi/meepo"
keywords = ["ai", "agent", "claude", "automation", "mcp"]
categories = ["command-line-utilities"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
tantivy = "0.22"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
dirs = "6"
notify = "7"
cron = "0.13"
url = "2"
lru = "0.12"
glob = "0.3"
arboard = "3"
open = "5"
serde_yml = "0.0.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
