[package]
name = "meepo-a2a"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A2A (Agent-to-Agent) protocol support for Meepo AI agent"

[dependencies]
meepo-core = { path = "../meepo-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
lru = { workspace = true }
