[package]
name = "meepo-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "meepo"
path = "src/main.rs"

[dependencies]
meepo-core = { path = "../meepo-core" }
meepo-channels = { path = "../meepo-channels" }
meepo-knowledge = { path = "../meepo-knowledge" }
meepo-scheduler = { path = "../meepo-scheduler" }
meepo-mcp = { path = "../meepo-mcp" }
meepo-a2a = { path = "../meepo-a2a" }
meepo-gateway = { path = "../meepo-gateway" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
cron = { workspace = true }
