[package]
name = "meepo-core"
version.workspace = true
edition.workspace = true

[dependencies]
meepo-knowledge = { path = "../meepo-knowledge" }
meepo-scheduler = { path = "../meepo-scheduler" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = "3"
